--- a/textolite/conf.ini
+++ b/textolite/conf.ini
@@ -2,15 +2,15 @@ lang = en,ru
 
 password = 6fbde3e2135f10ee603ff6f59bc97d4b0a4d4e9a
 
-session = becb9d61c566324426f63d595272294ff368250e
+session = 
 
 pass_complexity = 500000
 
-pass_complexity_js = 14991
+pass_complexity_js = 14999
 
-auth_time = 1571337311
+auth_time = 1732877653
 
-auth_error_time = 1571337305
+auth_error_time = 1732877607
 
 auth_error_list = a%3A0%3A%7B%7D
 
